--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="icon" href="/src/assets/icon.png" />
+		<link rel="icon" type="icon" href="/src/assets/video.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Lyd Jukebox</title>
+		<title>Mugshot</title>
 	</head>
 	<body>
 		<div id="root"></div>
